; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_cache.c_cache_fresh_locked.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_cache.c_cache_fresh_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_head = type { i32, i32, i32 }

@CACHE_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cache_head*, i32)* @cache_fresh_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cache_fresh_locked(%struct.cache_head* %0, i32 %1) #0 {
  %3 = alloca %struct.cache_head*, align 8
  %4 = alloca i32, align 4
  store %struct.cache_head* %0, %struct.cache_head** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.cache_head*, %struct.cache_head** %3, align 8
  %7 = getelementptr inbounds %struct.cache_head, %struct.cache_head* %6, i32 0, i32 2
  store i32 %5, i32* %7, align 4
  %8 = call i32 (...) @seconds_since_boot()
  %9 = load %struct.cache_head*, %struct.cache_head** %3, align 8
  %10 = getelementptr inbounds %struct.cache_head, %struct.cache_head* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = call i32 (...) @smp_wmb()
  %12 = load i32, i32* @CACHE_VALID, align 4
  %13 = load %struct.cache_head*, %struct.cache_head** %3, align 8
  %14 = getelementptr inbounds %struct.cache_head, %struct.cache_head* %13, i32 0, i32 0
  %15 = call i32 @set_bit(i32 %12, i32* %14)
  ret void
}

declare dso_local i32 @seconds_since_boot(...) #1

declare dso_local i32 @smp_wmb(...) #1

declare dso_local i32 @set_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
